Changed default seekbar behaviour: click wikk seek to mouse position

--- a/.settings
+++ b/.settings
@@ -1144,22 +1144,22 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:3.2"
+Active=1
+File[1]="CHANGELOG_GIT:3.10"
 File[2]=".src/Classi/YoutubeClass.class:333.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:4697.0"
+File[4]=".src/Form/FMain.class:295.3"
 File[5]=".src/Classi/PodCast.class:39.0"
 File[6]=".src/Classi/ShoutCastClass.class:182.0"
 File[7]=".src/Classi/SettingsClass.class:68.0"
 File[8]=".src/Form/Chains.form"
-Active=9
-File[9]=".src/0_Moduli/Global.module:339.0"
+File[9]=".src/0_Moduli/Global.module:339.51"
 File[10]=".src/Classi/AlbumView.class:351.0"
 File[11]=".src/Classi/DynaGuiClass.class:24.0"
 File[12]=".src/Classi/DynaGuiClassBAK.class:23.27"
 File[13]=".src/Classi/FlashClass.class:72.23"
 File[14]=".src/Classi/Meters.class:10.0"
-File[15]=".src/Classi/MplayerClass.class:835.0"
+File[15]=".src/Classi/MplayerClass.class:293.0"
 File[16]=".src/Classi/OpenSubtitlesAPI.class:308.0"
 File[17]=".src/Classi/PlaylistClass.class:1033.0"
 File[18]=".src/Classi/TagLib.class:162.0"
@@ -1171,7 +1171,7 @@ File[23]=".src/Form/CoverManager.class:437.0"
 File[24]=".src/Form/DVBTuner.class:86.11"
 File[25]=".src/Form/EpgForm.class:455.0"
 File[26]=".src/Form/GeneralOptions.class:530.0"
-File[27]=".src/Form/HotKeyGrab.class:188.0"
+File[27]=".src/Form/HotKeyGrab.class:142.33"
 File[28]=".src/Form/HotKeys.class:501.0"
 File[29]=".src/Form/LogWindow.class:99.28"
 File[30]=".src/Form/OpenSubtitesForm.class:93.0"
@@ -1181,7 +1181,10 @@ File[33]=".src/Form/SubAndOsd.class:78.0"
 File[34]=".src/Form/VFiltersCfg.class:124.0"
 File[35]=".src/Form/XConfigureAudioDriver.class:173.0"
 File[36]=".src/Form/XConfigureVideoDriver.class:133.0"
-Count=36
+File[37]=".src/Form/MyQuestion.form"
+File[38]=".src/Form/MyQuestion.class:79.10"
+File[39]=".src/Form/GeneralOptions.form"
+Count=39
 
 [Watches]
 Count=4
