Fixed fullscreen handling when xt7 is embedded

--- a/.project
+++ b/.project
@@ -25,6 +25,7 @@ Translate=1
 Language=en
 ControlPublic=1
 ModulePublic=1
+ExecPath=/home/root/Gambas3/xt7-player.gambas
 SourcePath=/root/Desktop2_kde4/xt7
 Maintainer=Antonio Orefice
 Address=xt7player@gmail.com
