--- a/.settings
+++ b/.settings
@@ -1144,16 +1144,15 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:3.10"
+File[1]="CHANGELOG_GIT:26.0"
 File[2]=".src/Classi/YoutubeClass.class:333.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:295.3"
+File[4]=".src/Form/FMain.class:287.3"
 File[5]=".src/Classi/PodCast.class:39.0"
 File[6]=".src/Classi/ShoutCastClass.class:182.0"
 File[7]=".src/Classi/SettingsClass.class:68.0"
 File[8]=".src/Form/Chains.form"
-File[9]=".src/0_Moduli/Global.module:339.51"
+File[9]=".src/0_Moduli/Global.module:344.2"
 File[10]=".src/Classi/AlbumView.class:351.0"
 File[11]=".src/Classi/DynaGuiClass.class:24.0"
 File[12]=".src/Classi/DynaGuiClassBAK.class:23.27"
@@ -1184,7 +1183,13 @@ File[36]=".src/Form/XConfigureVideoDriver.class:133.0"
 File[37]=".src/Form/MyQuestion.form"
 File[38]=".src/Form/MyQuestion.class:79.10"
 File[39]=".src/Form/GeneralOptions.form"
-Count=39
+File[40]=".src/Form/FsForm.form"
+File[41]=".src/Form/FsForm.class:0.0"
+File[42]=".src/Form/zzzFake.form"
+File[43]=".src/Form/zzzFake.class:23.7"
+Active=44
+File[44]="AA_ToDo:111.25"
+Count=44
 
 [Watches]
 Count=4
