--- a/.settings
+++ b/.settings
@@ -1144,15 +1144,16 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-File[1]="CHANGELOG_GIT:26.0"
+File[1]="CHANGELOG_GIT:2.0"
 File[2]=".src/Classi/YoutubeClass.class:333.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:287.3"
+File[4]=".src/Form/FMain.class:3366.27"
 File[5]=".src/Classi/PodCast.class:39.0"
 File[6]=".src/Classi/ShoutCastClass.class:182.0"
 File[7]=".src/Classi/SettingsClass.class:68.0"
 File[8]=".src/Form/Chains.form"
-File[9]=".src/0_Moduli/Global.module:344.2"
+Active=9
+File[9]=".src/0_Moduli/Global.module:339.0"
 File[10]=".src/Classi/AlbumView.class:351.0"
 File[11]=".src/Classi/DynaGuiClass.class:24.0"
 File[12]=".src/Classi/DynaGuiClassBAK.class:23.27"
@@ -1168,7 +1169,7 @@ File[21]=".src/Form/AFiltersCfg.class:107.0"
 File[22]=".src/Form/AddUriForm.class:18.0"
 File[23]=".src/Form/CoverManager.class:437.0"
 File[24]=".src/Form/DVBTuner.class:86.11"
-File[25]=".src/Form/EpgForm.class:455.0"
+File[25]=".src/Form/EpgForm.class:151.0"
 File[26]=".src/Form/GeneralOptions.class:530.0"
 File[27]=".src/Form/HotKeyGrab.class:142.33"
 File[28]=".src/Form/HotKeys.class:501.0"
@@ -1187,9 +1188,10 @@ File[40]=".src/Form/FsForm.form"
 File[41]=".src/Form/FsForm.class:0.0"
 File[42]=".src/Form/zzzFake.form"
 File[43]=".src/Form/zzzFake.class:23.7"
-Active=44
-File[44]="AA_ToDo:111.25"
-Count=44
+File[44]="AA_ToDo:111.27"
+File[45]=".src/Classi/FloatSpinBox.class:87.17"
+File[46]=".src/Form/VideoEqualizer.class:24.13"
+Count=46
 
 [Watches]
 Count=4
