--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 Title=xt7-player
 Startup=StartClass
 Icon=xt7-player.png
-Version=3.3.0
+Version=3.3.1
 Component=gb.image
 Component=gb.qt4
 Component=gb.form
@@ -16,6 +16,7 @@ Component=gb.form.mdi
 Component=gb.net
 Component=gb.net.curl
 Component=gb.qt4.ext
+Component=gb.signal
 Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
