--- a/.project
+++ b/.project
@@ -3,7 +3,7 @@
 Title=xt7-player
 Startup=StartClass
 Icon=xt7-player.png
-Version=3.3.1
+Version=3.3.2
 Component=gb.image
 Component=gb.qt4
 Component=gb.form
@@ -21,6 +21,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
+Arguments="/mnt/nas.crypt/Musica/AC3Test.avi\n-pluginmode\n"
 TabSize=2
 Translate=1
 Language=en
