Don't call setstyle_early() from allinit_post()

--- a/.project
+++ b/.project
@@ -21,7 +21,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
-Arguments="/mnt/nas.crypt/Musica/AC3Test.avi\n-pluginmode\n"
+Arguments="-pluginmode"
 TabSize=2
 Translate=1
 Language=en
