--- a/.project
+++ b/.project
@@ -21,6 +21,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
+Arguments="/mnt/nas.crypt/Musica/U2.-.Rattle and Hum/U2 - Rattle and Hum - 04 - Hawkmoon 269.ogg\n-pluginmode"
 TabSize=2
 Translate=1
 Language=en
