--- a/.settings
+++ b/.settings
@@ -1155,18 +1155,18 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
-File[1]="CHANGELOG_GIT:4.79"
+File[1]="CHANGELOG_GIT:3.87"
 File[2]=".src/Classi/YoutubeClass.class:333.6"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/FMain.class:301.16"
+File[4]=".src/Form/FMain.class:301.9"
 File[5]=".src/Classi/PodCast.class:39.0"
 File[6]=".src/Classi/ShoutCastClass.class:182.0"
-File[7]=".src/Classi/SettingsClass.class:68.0"
+File[7]=".src/Classi/SettingsClass.class:424.30"
 File[8]=".src/Form/Chains.form"
-File[9]=".src/0_Moduli/Global.module:341.0"
+Active=9
+File[9]=".src/0_Moduli/Global.module:341.67"
 File[10]=".src/Classi/AlbumView.class:351.0"
-File[11]=".src/Classi/DynaGuiClass.class:24.0"
+File[11]=".src/Classi/DynaGuiClass.class:130.38"
 File[12]=".src/Classi/DynaGuiClassBAK.class:23.27"
 File[13]=".src/Classi/FlashClass.class:72.23"
 File[14]=".src/Classi/Meters.class:10.0"
@@ -1205,7 +1205,8 @@ File[46]=".src/Form/VideoEqualizer.class:24.13"
 File[47]=".src/Classi/StartClass.class:19.0"
 File[48]=".src/Form/EpgForm.form"
 File[49]="caching.gif"
-Count=49
+File[50]=".src/Form/Chains.class:48.25"
+Count=50
 
 [Watches]
 Count=4
