--- a/.settings
+++ b/.settings
@@ -1153,9 +1153,18 @@ SearchComment=True
 SearchString=True
 
 [OpenFile]
-Active=1
 File[1]="caching.gif"
-Count=1
+File[2]=".src/Form/zzzFake.form"
+File[3]=".src/Form/FMain.form"
+File[4]=".src/Form/EpgForm.class:0.0"
+File[5]=".src/Form/FMain.class:1438.10"
+File[6]=".src/Form/FsForm.form"
+File[7]=".src/Form/FsForm.class:0.0"
+File[8]=".src/0_Moduli/Global.module:341.0"
+File[9]="CHANGELOG_GIT:3.33"
+Active=10
+File[10]=".src/Classi/MplayerClass.class:1417.2"
+Count=10
 
 [Watches]
 Count=4
