Added a timeout to the stop function

--- a/.settings
+++ b/.settings
@@ -1157,14 +1157,15 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:1438.10"
+File[5]=".src/Form/FMain.class:3056.28"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
+Active=8
 File[8]=".src/0_Moduli/Global.module:341.0"
-File[9]="CHANGELOG_GIT:3.33"
-Active=10
+File[9]="CHANGELOG_GIT:3.11"
 File[10]=".src/Classi/MplayerClass.class:1417.2"
-Count=10
+File[11]=".src/Form/Chains.form"
+Count=11
 
 [Watches]
 Count=4
