--- a/.settings
+++ b/.settings
@@ -361,6 +361,9 @@ Geometry=[51,0,210,210]
 [DebugWindow/PlayListGrid[PlayListGrid.row, myplaylist.ColumnIndex["Filename"]]]
 Geometry=[51,0,210,210]
 
+[DebugWindow/Playerprocess]
+Geometry=[1280,0,265,402]
+
 [DebugWindow/Playlistfile]
 Geometry=[0,0,645,980]
 
@@ -1157,15 +1160,16 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:3056.28"
+Active=5
+File[5]=".src/Form/FMain.class:301.0"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-Active=8
-File[8]=".src/0_Moduli/Global.module:341.0"
-File[9]="CHANGELOG_GIT:3.11"
-File[10]=".src/Classi/MplayerClass.class:1417.2"
+File[8]=".src/0_Moduli/Global.module:366.72"
+File[9]="CHANGELOG_GIT:3.10"
+File[10]=".src/Classi/MplayerClass.class:986.27"
 File[11]=".src/Form/Chains.form"
-Count=11
+File[12]=".src/Form/MyQuestion.form"
+Count=12
 
 [Watches]
 Count=4
