Correctly resize bottom vpanel when switching fullscreen

--- a/.settings
+++ b/.settings
@@ -568,6 +568,9 @@ Geometry=[48,660,811,335]
 [DebugWindow/Userfont]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/VSplit(bottomvbox.parent.Parent).Parent]
+Geometry=[1294,14,467,521]
+
 [DebugWindow/VideoChainBox]
 Geometry=[52,0,210,831]
 
@@ -657,6 +660,9 @@ Geometry=[1280,0,210,210]
 
 [DebugWindow/blackbox]
 Geometry=[794,22,315,922]
+
+[DebugWindow/bottomvbox.parent.Parent]
+Geometry=[1280,0,467,521]
 
 [DebugWindow/brother]
 Geometry=[1280,0,210,210]
@@ -1160,12 +1166,12 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:2504.14"
+File[5]=".src/Form/FMain.class:758.20"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
 Active=8
-File[8]=".src/0_Moduli/Global.module:341.72"
-File[9]="CHANGELOG_GIT:3.10"
+File[8]=".src/0_Moduli/Global.module:341.17"
+File[9]="CHANGELOG_GIT:3.27"
 File[10]=".src/Classi/MplayerClass.class:986.27"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
