--- a/.settings
+++ b/.settings
@@ -808,6 +808,9 @@ Geometry=[1280,0,415,708]
 [DebugWindow/librarygrid.Rows]
 Geometry=[65,417,614,580]
 
+[DebugWindow/librarygrid.parent]
+Geometry=[2034,532,501,614]
+
 [DebugWindow/lines]
 Geometry=[0,0,1186,344]
 
@@ -1166,16 +1169,17 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-Active=5
-File[5]=".src/Form/FMain.class:295.34"
+File[5]=".src/Form/FMain.class:801.49"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-File[8]=".src/0_Moduli/Global.module:336.27"
-File[9]="CHANGELOG_GIT:3.11"
+Active=8
+File[8]=".src/0_Moduli/Global.module:347.62"
+File[9]="CHANGELOG_GIT:3.0"
 File[10]=".src/Classi/MplayerClass.class:986.27"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
-Count=12
+File[13]=".src/Classi/PlaylistClass.class:1450.0"
+Count=13
 
 [Watches]
 Count=4
