Avoid crash when skipping files too quickly

--- a/.settings
+++ b/.settings
@@ -1169,17 +1169,18 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:801.49"
+File[5]=".src/Form/FMain.class:1361.22"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-Active=8
-File[8]=".src/0_Moduli/Global.module:347.62"
+File[8]=".src/0_Moduli/Global.module:82.10"
 File[9]="CHANGELOG_GIT:3.0"
 File[10]=".src/Classi/MplayerClass.class:986.27"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
 File[13]=".src/Classi/PlaylistClass.class:1450.0"
-Count=13
+Active=14
+File[14]=".src/Form/HotKeys.class:248.14"
+Count=14
 
 [Watches]
 Count=4
