--- a/.settings
+++ b/.settings
@@ -1,5 +1,6 @@
 [Breakpoints]
-Count=0
+Breakpoint[1]="FMain.6674"
+Count=1
 
 [DebugWindow]
 Count=0
@@ -84,6 +85,9 @@ Geometry=[0,0,210,210]
 
 [DebugWindow/Container]
 Geometry=[0,0,301,301]
+
+[DebugWindow/ControlPanel]
+Geometry=[1280,0,210,778]
 
 [DebugWindow/CoverCacheList]
 Geometry=[51,587,660,344]
@@ -1169,18 +1173,25 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:3086.19"
+Active=5
+File[5]=".src/Form/FMain.class:9967.23"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-Active=8
 File[8]=".src/0_Moduli/Global.module:341.2"
-File[9]="CHANGELOG_GIT:3.61"
-File[10]=".src/Classi/MplayerClass.class:731.0"
+File[9]="CHANGELOG_GIT:5.10"
+File[10]=".src/Classi/MplayerClass.class:295.0"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
 File[13]=".src/Classi/PlaylistClass.class:527.0"
 File[14]=".src/Form/HotKeys.class:248.14"
-Count=14
+File[15]=".src/Form/AudioForm.form"
+File[16]=".src/Form/AudioForm.class:76.30"
+File[17]=".src/Classi/DynaGuiClass.class:222.13"
+File[18]=".src/Form/CoverManager.class:933.20"
+File[19]=".src/Form/GeneralOptions.class:695.54"
+File[20]=".src/Classi/Meters.class:26.26"
+File[21]="AA_ToDo:44.0"
+Count=21
 
 [Watches]
 Count=4
