--- a/xt7-player.desktop
+++ b/xt7-player.desktop
@@ -4,6 +4,7 @@ Name=xt7-player
 Comment=Yet another gui for mplayer
 Comment[pt_BR]=Reprodutor de mÃ­dia
 Comment[it_IT]=Una gui quasi completa per mplayer
+Comment[ru]=Графический интерфейс к MPlayer
 Exec=xt7-player.gambas
 Icon=/usr/share/pixmaps/xt7-player.png
 Terminal=false
