--- a/.settings
+++ b/.settings
@@ -2,8 +2,7 @@
 Count=0
 
 [DebugWindow]
-Count=1
-DebugWindow[1]="ytdloutlines"
+Count=0
 
 [DebugWindow/AC3s]
 Geometry=[928,154,344,344]
@@ -1176,12 +1175,12 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:2620.53"
+Active=5
+File[5]=".src/Form/FMain.class:330.2"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
 File[8]=".src/0_Moduli/Global.module:341.2"
-Active=9
-File[9]="CHANGELOG_GIT:9.11"
+File[9]="CHANGELOG_GIT:3.49"
 File[10]=".src/Classi/MplayerClass.class:747.35"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
@@ -1193,11 +1192,12 @@ File[17]=".src/Classi/DynaGuiClass.class:222.13"
 File[18]=".src/Form/CoverManager.class:933.20"
 File[19]=".src/Form/GeneralOptions.class:198.6"
 File[20]=".src/Classi/Meters.class:24.22"
-File[21]="AA_ToDo:44.0"
+File[21]="AA_ToDo:664.0"
 File[22]=".src/Form/EpgForm.form"
 File[23]=".src/Form/GeneralOptions.form"
 File[24]=".src/Classi/YoutubeClass.class:470.86"
-Count=24
+File[25]="xt7-player.desktop:13.0"
+Count=25
 
 [Watches]
 Count=4
