--- a/.project
+++ b/.project
@@ -21,7 +21,7 @@ Component=gb.web
 Component=gb.xml
 Description="Xt7-Player, an (almost) complete mplayer gui"
 Authors="Antonio Orefice <xt7player@gmail.com>"
-Arguments="/mnt/nas.crypt/Musica/Roxette - Travelling (2012)/01 - Roxette - Me & You & Terry & Julie.mp3\n-pluginmode"
+Arguments=""
 TabSize=2
 Translate=1
 Language=en
