--- a/.settings
+++ b/.settings
@@ -1030,6 +1030,9 @@ Geometry=[0,41,344,344]
 [DebugWindow/s]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/samples]
+Geometry=[47,0,210,210]
+
 [DebugWindow/scr]
 Geometry=[42,95,210,210]
 
@@ -1181,13 +1184,13 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:9918.2"
+Active=5
+File[5]=".src/Form/FMain.class:3689.0"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-Active=8
-File[8]=".src/0_Moduli/Global.module:341.2"
+File[8]=".src/0_Moduli/Global.module:341.67"
 File[9]="CHANGELOG_GIT:3.10"
-File[10]=".src/Classi/MplayerClass.class:1309.27"
+File[10]=".src/Classi/MplayerClass.class:308.27"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
 File[13]=".src/Classi/PlaylistClass.class:1069.44"
@@ -1197,7 +1200,7 @@ File[16]=".src/Form/AudioForm.class:83.29"
 File[17]=".src/Classi/DynaGuiClass.class:222.13"
 File[18]=".src/Form/CoverManager.class:933.20"
 File[19]=".src/Form/GeneralOptions.class:198.6"
-File[20]=".src/Classi/Meters.class:97.55"
+File[20]=".src/Classi/Meters.class:135.5"
 File[21]="AA_ToDo:638.0"
 File[22]=".src/Form/EpgForm.form"
 File[23]=".src/Form/GeneralOptions.form"
