Give video area tracking

--- a/.settings
+++ b/.settings
@@ -1184,11 +1184,11 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:0.0"
-Active=5
-File[5]=".src/Form/FMain.class:3689.0"
+File[5]=".src/Form/FMain.class:9963.7"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-File[8]=".src/0_Moduli/Global.module:341.67"
+File[8]=".src/0_Moduli/Global.module:341.36"
+Active=9
 File[9]="CHANGELOG_GIT:3.10"
 File[10]=".src/Classi/MplayerClass.class:308.27"
 File[11]=".src/Form/Chains.form"
@@ -1209,7 +1209,9 @@ File[25]="xt7-player.desktop:13.0"
 File[26]=".src/Classi/StartClass.class:20.15"
 File[27]=".src/Form/zzzFake.class:58.19"
 File[28]=".src/Classi/TagLib.class:71.15"
-Count=28
+File[29]=".src/Form/HotKeyGrab.class:146.39"
+File[30]=".src/Form/HotKeyGrab.form"
+Count=30
 
 [Watches]
 Count=4
