A few of new icons (thanks to  Alessandro Bompadre)

--- a/.settings
+++ b/.settings
@@ -1183,23 +1183,23 @@ SearchString=True
 File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
-File[4]=".src/Form/EpgForm.class:0.0"
-File[5]=".src/Form/FMain.class:9963.7"
+File[4]=".src/Form/EpgForm.class:719.31"
+File[5]=".src/Form/FMain.class:7159.39"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
 File[8]=".src/0_Moduli/Global.module:341.36"
 Active=9
 File[9]="CHANGELOG_GIT:3.10"
-File[10]=".src/Classi/MplayerClass.class:308.27"
+File[10]=".src/Classi/MplayerClass.class:761.16"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
 File[13]=".src/Classi/PlaylistClass.class:1069.44"
-File[14]=".src/Form/HotKeys.class:248.14"
+File[14]=".src/Form/HotKeys.class:171.38"
 File[15]=".src/Form/AudioForm.form"
 File[16]=".src/Form/AudioForm.class:83.29"
 File[17]=".src/Classi/DynaGuiClass.class:222.13"
 File[18]=".src/Form/CoverManager.class:933.20"
-File[19]=".src/Form/GeneralOptions.class:198.6"
+File[19]=".src/Form/GeneralOptions.class:726.24"
 File[20]=".src/Classi/Meters.class:135.5"
 File[21]="AA_ToDo:638.0"
 File[22]=".src/Form/EpgForm.form"
@@ -1209,9 +1209,17 @@ File[25]="xt7-player.desktop:13.0"
 File[26]=".src/Classi/StartClass.class:20.15"
 File[27]=".src/Form/zzzFake.class:58.19"
 File[28]=".src/Classi/TagLib.class:71.15"
-File[29]=".src/Form/HotKeyGrab.class:146.39"
+File[29]=".src/Form/HotKeyGrab.class:147.7"
 File[30]=".src/Form/HotKeyGrab.form"
-Count=30
+File[31]=".src/Form/Chains.class:76.0"
+File[32]=".src/Form/VFiltersCfg.class:531.0"
+File[33]=".src/Classi/SettingsClass.class:287.0"
+File[34]=".src/Form/AFiltersCfg.class:444.39"
+File[35]="MoreResults.png"
+File[36]=".src/Classi/AlbumView.class:282.48"
+File[37]=".src/Form/ProfileManager.class:14.37"
+File[38]=".src/Form/TranslationNeeded.class:11.20"
+Count=38
 
 [Watches]
 Count=4
