Sometimes scrollbars didn't show up in grids (again)

--- a/.settings
+++ b/.settings
@@ -664,6 +664,9 @@ Geometry=[1280,0,210,210]
 [DebugWindow/bars]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/bars[0]]
+Geometry=[1881,263,210,210]
+
 [DebugWindow/blackbox]
 Geometry=[794,22,315,922]
 
@@ -1012,6 +1015,9 @@ Geometry=[0,404,301,301]
 [DebugWindow/preferredlangs]
 Geometry=[1280,0,210,210]
 
+[DebugWindow/prova.Children]
+Geometry=[1280,0,225,445]
+
 [DebugWindow/ptable]
 Geometry=[51,0,857,540]
 
@@ -1190,46 +1196,45 @@ File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:719.31"
-File[5]=".src/Form/FMain.class:3263.1"
+File[5]=".src/Form/FMain.class:2532.22"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-File[8]=".src/0_Moduli/Global.module:341.36"
+Active=8
+File[8]=".src/0_Moduli/Global.module:341.6"
 File[9]="CHANGELOG_GIT:3.10"
-File[10]=".src/Classi/MplayerClass.class:308.16"
+File[10]=".src/Classi/MplayerClass.class:1007.17"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
-File[13]=".src/Classi/PlaylistClass.class:1069.44"
+File[13]=".src/Classi/PlaylistClass.class:707.15"
 File[14]=".src/Form/HotKeys.class:171.38"
 File[15]=".src/Form/AudioForm.form"
-File[16]=".src/Form/AudioForm.class:83.29"
+File[16]=".src/Form/AudioForm.class:135.30"
 File[17]=".src/Classi/DynaGuiClass.class:222.13"
-File[18]=".src/Form/CoverManager.class:933.20"
-File[19]=".src/Form/GeneralOptions.class:726.24"
-File[20]=".src/Classi/Meters.class:80.0"
-Fold[20]=[57,200,324]
+File[18]=".src/Form/CoverManager.class:891.20"
+File[19]=".src/Form/GeneralOptions.class:899.0"
+File[20]=".src/Classi/Meters.class:169.0"
+Fold[20]=[54,91,221]
 File[21]="AA_ToDo:638.0"
 File[22]=".src/Form/EpgForm.form"
 File[23]=".src/Form/GeneralOptions.form"
 File[24]=".src/Classi/YoutubeClass.class:470.86"
 File[25]="xt7-player.desktop:13.0"
-File[26]=".src/Classi/StartClass.class:20.15"
+File[26]=".src/Classi/StartClass.class:19.15"
 File[27]=".src/Form/zzzFake.class:58.19"
 File[28]=".src/Classi/TagLib.class:71.15"
 File[29]=".src/Form/HotKeyGrab.class:147.7"
 File[30]=".src/Form/HotKeyGrab.form"
 File[31]=".src/Form/Chains.class:76.0"
 File[32]=".src/Form/VFiltersCfg.class:531.0"
-File[33]=".src/Classi/SettingsClass.class:287.0"
+File[33]=".src/Classi/SettingsClass.class:4.6"
 File[34]=".src/Form/AFiltersCfg.class:444.39"
 File[35]="MoreResults.png"
-File[36]=".src/Classi/AlbumView.class:282.48"
+File[36]=".src/Classi/AlbumView.class:272.31"
 File[37]=".src/Form/ProfileManager.class:14.37"
 File[38]=".src/Form/TranslationNeeded.class:11.20"
-File[39]=".src/Form/prova.form"
-Active=40
-File[40]=".src/Form/prova.class:25.12"
-File[41]=".src/Form/ProfileManager.form"
-Count=41
+File[39]=".src/Form/ProfileManager.form"
+File[40]="meterpt.png"
+Count=40
 
 [Watches]
 Count=4
