--- a/.settings
+++ b/.settings
@@ -1,5 +1,9 @@
+[Bookmarks]
+FMain=[]
+Global=[110]
+
 [Breakpoints]
-Breakpoint[1]="FMain.8403"
+Breakpoint[1]="FMain.8411"
 Count=1
 
 [DebugWindow]
@@ -1198,18 +1202,18 @@ SearchString=True
 [OpenFile]
 File[1]="caching.gif"
 File[2]=".src/Form/zzzFake.form"
+Active=3
 File[3]=".src/Form/FMain.form"
 File[4]=".src/Form/EpgForm.class:719.31"
-File[5]=".src/Form/FMain.class:332.7"
+File[5]=".src/Form/FMain.class:10024.0"
 File[6]=".src/Form/FsForm.form"
 File[7]=".src/Form/FsForm.class:0.0"
-File[8]=".src/0_Moduli/Global.module:341.7"
-Active=9
-File[9]="CHANGELOG_GIT:5.10"
+File[8]=".src/0_Moduli/Global.module:119.3"
+File[9]="CHANGELOG_GIT:12.0"
 File[10]=".src/Classi/MplayerClass.class:1007.17"
 File[11]=".src/Form/Chains.form"
 File[12]=".src/Form/MyQuestion.form"
-File[13]=".src/Classi/PlaylistClass.class:707.15"
+File[13]=".src/Classi/PlaylistClass.class:1115.14"
 File[14]=".src/Form/HotKeys.class:171.38"
 File[15]=".src/Form/AudioForm.form"
 File[16]=".src/Form/AudioForm.class:135.30"
@@ -1221,7 +1225,7 @@ Fold[20]=[55,92]
 File[21]="AA_ToDo:638.0"
 File[22]=".src/Form/EpgForm.form"
 File[23]=".src/Form/GeneralOptions.form"
-File[24]=".src/Classi/YoutubeClass.class:469.6"
+File[24]=".src/Classi/YoutubeClass.class:320.6"
 File[25]="xt7-player.desktop:13.0"
 File[26]=".src/Classi/StartClass.class:18.1"
 File[27]=".src/Form/zzzFake.class:8.0"
@@ -1230,7 +1234,7 @@ File[29]=".src/Form/HotKeyGrab.class:147.7"
 File[30]=".src/Form/HotKeyGrab.form"
 File[31]=".src/Form/Chains.class:76.0"
 File[32]=".src/Form/VFiltersCfg.class:531.0"
-File[33]=".src/Classi/SettingsClass.class:4.6"
+File[33]=".src/Classi/SettingsClass.class:595.17"
 File[34]=".src/Form/AFiltersCfg.class:209.39"
 File[35]="MoreResults.png"
 File[36]=".src/Classi/AlbumView.class:272.31"
@@ -1242,7 +1246,13 @@ File[41]=".src/Form/AddUriForm.class:45.29"
 File[42]=".src/Form/DVBTuner.class:409.8"
 File[43]="emptycover.png"
 File[44]=".src/Classi/OpenSubtitlesAPI.class:12.30"
-Count=44
+File[45]=".src/Form/LogWindow.form"
+File[46]=".src/Form/LogWindow.class:90.0"
+File[47]=".src/Classi/PodCast.class:175.0"
+File[48]=".src/Form/XConfigureAudioDriver.form"
+File[49]=".src/Form/XConfigureVideoDriver.form"
+File[50]=".src/Form/VideoEqualizer.form"
+Count=50
 
 [Watches]
 Count=4
